[project]
name = "python-package-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TODO", email = "TODO@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "selenium>=4.25.0",
    "webdriver-manager>=4.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]
